--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -8,6 +8,9 @@ find_package(glm REQUIRED)
 find_package(spdlog REQUIRED)
 find_package(mimalloc 2.0 REQUIRED)
 
+# setup glm
+target_compile_definitions(core PUBLIC GLM_SWIZZLE)
+
 # link packages
 target_link_libraries(core PUBLIC EASTL fmt::fmt-header-only glm::glm mimalloc)
 target_link_libraries(core PRIVATE spdlog::spdlog)
