--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,5 +1,19 @@
-# add module
-kun_add_module(core)
+# collect cpp files
+file(GLOB_RECURSE SRC_FILES src/*.cpp)
+
+# add target
+add_library(core SHARED ${SRC_FILES})
+
+# add include
+target_include_directories(core PUBLIC include/)
+
+# add export def
+target_compile_definitions(core PRIVATE "EXPORT_CORE")
+
+# set output dir
+set_target_properties(core PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${KUN_RUNTIME_DIR})
+set_target_properties(core PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${KUN_LIBRARY_DIR})
+set_target_properties(core PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${KUN_LIBRARY_DIR})
 
 # check packages
 find_package(eastl REQUIRED)
@@ -13,4 +27,4 @@ target_compile_definitions(core PUBLIC GLM_SWIZZLE)
 
 # link packages
 target_link_libraries(core PUBLIC EASTL fmt::fmt-header-only glm::glm)
-target_link_libraries(core PRIVATE spdlog::spdlog mimalloc)
+target_link_libraries(core PRIVATE mimalloc-static spdlog::spdlog)
