--- a/tests/test_core/CMakeLists.txt
+++ b/tests/test_core/CMakeLists.txt
@@ -1,9 +1,8 @@
-file(GLOB_RECURSE TEST_CORE_SRC *.cpp)
+# find gtest lib
+find_package(GTest REQUIRED)
 
-add_executable(test_core ${TEST_CORE_SRC})
+# add target
+kun_add_test(test_core core)
 
+# config libraries
 target_link_libraries(test_core PRIVATE core)
-
-set_target_properties(test_core PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${KUN_LIBRARY_OUTPUT_DIR})
-set_target_properties(test_core PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${KUN_RUNTIME_OUTPUT_DIR})
-set_target_properties(test_core PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${KUN_ARCHIVE_OUTPUT_DIR})
